# geicar

./: README.md  Readme_LPD.md
.devcontainer/: Dockerfile  devcontainer.json  installNode.sh  postCreateCommand.sh
.github/workflows/: ci.yml
CharacterDetection/: data.yaml  test.py  train.py
ImageCapture/: Image_Preprocessing.py  image_crop.py  webcam_image_capture.py
ImageCapture/test_crop/: test_crop.xml
PlaqueDetection/: .gitignore  PlaqueDetection.md  test.py  test_video.py  train.py
PlaqueDetection/Char_Extraction/: construct_dataset.py  output.xml
PlaqueDetection/Char_Extraction_With_Segmentation/: Character_Extraction.py  LPD_Pipeline_with_verif.py  Segmentor.py  Tilt_Corrector.py  detect.py
PlaqueDetection/datasets/: data.yaml
general/: dev_container.md
log/: latest_test
raspberryPI3/: initial_configuration.md
raspberryPI3/configuration_files/: time_update.sh
raspberryPI3/ros2_ws/: cmd_vel_demo.csv  cmd_vel_demo_adjusted.csv  gnss_data.csv  gnss_data_average.csv  gnss_data_long.csv  gnss_data_short.csv  gps_fix_adjusted.csv  odom_feedback.db3  orientation.json  path.csv  path.db3
raspberryPI3/ros2_ws/src/can/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/can/include/can/: can.h
raspberryPI3/ros2_ws/src/can/src/: can_rx_node.cpp
website/: README.md  index.html  style.css
website/data/: gps_nov13_cloudy_part2.csv  gps_nov15_sunny_1.csv  gps_nov15_sunny_2straightback.csv
website/js/: gps.js  map.js  ros.js
website/parking-management/: LICENSE.md  README.md  package-lock.json  package.json
website/server/: README.md
(+2271 files in other folders)
