<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can</name>
  <version>0.0.0</version>
  <description>Manage the communication with the can bus</description>
  <maintainer email="a.pierreditlambert@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

</package>